# hcd-chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  chatbot.py  pyproject.toml  requirements.txt
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/public/: dark-theme.css  light-theme.css
frontend/src/: App.tsx  main.tsx
frontend/src/Components/Chat/: index.tsx
frontend/src/services/: auth.ts  http.ts
frontend/src/views/: Chat.tsx  Login.tsx
templates/: index.html
