[tool.poetry]
name = "hcd-chatbot"
version = "0.1.0"
description = ""
authors = ["janelle-tay <janelle-tay@temus.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Flask = "3.0.3"
openai = "^1.43.0"
google-generativeai = "^0.7.2"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
watchdog = "^2.1.0"
werkzeug = "^3.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
